--- a/docs/src/06_runtime_view.adoc
+++ b/docs/src/06_runtime_view.adoc
@@ -1,7 +1,7 @@
 ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-runtime-view]]
-== Vista en tiempo de ejecución
+== Vista en Tiempo de Ejecución
 
 ifdef::arc42help[]
 [role="arc42help"]
