--- a/docs/src/02_architecture_constraints.adoc
+++ b/docs/src/02_architecture_constraints.adoc
@@ -1,7 +1,7 @@
 ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-architecture-constraints]]
-== Restricciones de arquitectura
+== Restricciones de Arquitectura
 
 ifdef::arc42help[]
 [role="arc42help"]
